--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     
 }
+.menu
+{
+
+}
 .logo
 {
     font-family: 'Allerta Stencil', sans-serif;
@@ -34,6 +38,13 @@ ul li a{
 .product
 {
     padding: 40px 0;
+    text-align: center;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+}
+.about
+{
     text-align: center;
 }
 .contact
