--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
-    margin-left: 20;
+    margin: 0;
+    padding: 0;
 }
 body{
     margin:2em;
@@ -40,13 +41,13 @@ ul li a{
 
 }
 .pic_header{
-    width: 90%;
     height: 90vh;
     background-image: url("Header.png");
     background-size: cover;
     border-radius: 15px;
     padding-left: 9em;
     background-repeat: no-repeat;
+       
 }
 .header_h1
 {
@@ -56,6 +57,7 @@ ul li a{
 	color: white;
 	font-size: 90px;
 	text-align:start;
+    margin-top: 29;
 }
 .header_h2
 {
@@ -85,6 +87,18 @@ ul li a{
     font-family: 'DM Sans', sans-serif;
     margin-left: 2em;
 }
+h3 button{
+    padding: 12px;
+    border-radius: 14px;
+    background-color: #A18A68;
+    color: aliceblue;
+    outline: none;
+    border: none;
+}
+h3 button:hover{
+    padding: 14px;
+}
+
 
 .product
 {
@@ -94,6 +108,8 @@ ul li a{
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 50px;
+    gap: 100px;
+    
 }
 .price {
     color: #A18A68;
@@ -127,8 +143,20 @@ ul li a{
  a:hover {
     color: #f5deae;
 }
+.custom-form
+{
+    position: relative;
+    padding: 15px 0 0;
+    margin-top: 10px;
+     
+}
 .form{
-    width: 50%;
+    width: auto;
+    border: 0;
+    border-bottom: 2px solid;
+    font-size: 1.3rem;
+    padding: 7px 0;
+    transition: border-color 0.2s;
 }
 /* for description */
 .custom-aside
@@ -136,18 +164,21 @@ ul li a{
     display: flex;
     justify-content: space-between;
 }
-#custom-h1
-{
+
+    
+.button {
     font-family: 'Allerta Stencil', sans-serif;
     font-family: 'DM Sans', sans-serif;
-    color: #686AA1;
-    font-weight: bold;
-    border-style:none;
+    background-color: #e9bf9e;
+    border: none;
+    color: rgb(138, 95, 159);
+    padding: 15px 32px;
     text-align: center;
-    font-size:30px;
-    background-color: #C4B6A0;
-
-}
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;}
 #custom-des
 {
     font-family: 'Allerta Stencil', sans-serif;
@@ -173,4 +204,84 @@ aside {
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 50px;
+}
+h4 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    color: #6f4c7f;
+}
+.fa-solid
+{
+    color: yellow;
+}
+.description {
+    text-align: center;
+    width: 43%;
+}
+
+.clientImage {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.clientImage span {
+    margin-left: 10px;
+}
+
+.clientImage img {
+    width: 40px;
+}
+
+.reviewSection {
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.reviewItem {
+    width: 300px;
+    padding: 10px;
+    margin: 1rem;
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: #cfc9c3;
+    border: 1px solid #ddc8a2;
+    transition: all .2s linear;
+}
+
+.reviewItem:hover {
+    border-color: rgb(235, 186, 243);
+    transform: scale(1.01);
+    background-color: #946d1e;
+    box-shadow: 0 0px 5px 0px #cbc0c0;
+}
+
+.top {
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.top ul {
+    display: flex;
+    list-style: none;
+}
+
+.top ul li {
+    padding-left: 4px;
+}
+
+article p {
+    font-size: 15px;
+    font-weight: 100;
+    margin-bottom: 1rem;
+    font-family: 'Allerta Stencil', sans-serif;
+    font-family: 'DM Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
